# cpp-skeleton

./: CMakeLists.txt  Doxyfile
cmake/: A441FirstRun.cmake  A441Macros.cmake  A441Skeleton.cmake  A441Testing.cmake
src/: CMakeLists.txt  lib.cpp  lib.h  main.cpp  test.cpp
